RESOLVED FIXED Bug 164397
REGRESSION (r207717): DumpRenderTree crashed in com.apple.WebCore: WebCore::Style::Scope::flushPendingUpdate + 16
https://bugs.webkit.org/show_bug.cgi?id=164397
Summary REGRESSION (r207717): DumpRenderTree crashed in com.apple.WebCore: WebCore::S...
Attachments
patch (5.00 KB, patch)
2016-11-03 20:10 PDT, Antti Koivisto
no flags
patch (4.94 KB, patch)
2016-11-03 20:16 PDT, Antti Koivisto
no flags
patch (4.72 KB, patch)
2016-11-03 21:57 PDT, Antti Koivisto
no flags
Antti Koivisto
Comment 1 2016-11-03 19:50:34 PDT
Antti Koivisto
Comment 2 2016-11-03 20:10:31 PDT
WebKit Commit Bot
Comment 3 2016-11-03 20:11:25 PDT
Attachment 293849 [details] did not pass style-queue: ERROR: Source/WebCore/dom/ShadowRoot.cpp:93: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] Total errors found: 1 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Antti Koivisto
Comment 4 2016-11-03 20:16:44 PDT
Antti Koivisto
Comment 5 2016-11-03 21:57:17 PDT
WebKit Commit Bot
Comment 6 2016-11-03 23:24:05 PDT
Comment on attachment 293862 [details] patch Clearing flags on attachment: 293862 Committed r208378: <http://trac.webkit.org/changeset/208378>
WebKit Commit Bot
Comment 7 2016-11-03 23:24:10 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.